<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#608DB4B3"
    android:visibility="visible"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="94dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="457dp"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="94dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="350dp"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="148dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="102dp"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="295dp"
        android:layout_marginBottom="224dp"
        android:backgroundTint="#20516F69"
        android:text="@string/add" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="124dp"
        android:layout_marginEnd="199dp"
        android:layout_marginBottom="224dp"
        android:backgroundTint="#20516F69"
        android:text="@string/sub" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="212dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="225dp"
        android:backgroundTint="#20516F69"
        android:text="@string/mul" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="307dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="225dp"
        android:backgroundTint="#20516F69"
        android:text="@string/div" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="597dp"
        android:text="@string/calc"
        android:textColor="#1D2725"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="118dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="529dp"
        android:text="@string/num1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="414dp"
        android:text="@string/num2"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="116dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="297dp"
        android:text="@string/op"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="163dp"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="163dp"
        android:text="@string/rst"
        android:textSize="18sp" />

</RelativeLayout>